@@ -1651,7 +1651,9 @@ nwamui_object_real_commit( NwamuiObject *object )
             if (i == NWAM_NCU_CLASS_IP) {
                 nwamui_ncu_sync_handle_with_ip_data(self);
                 /* doo 12653, if user disable both ipv4/v6, disable IP NCU simplely. */
-                prv->enabled = (prv->ipv4_active || prv->ipv6_active);
+                if (!prv->ipv4_active && !prv->ipv6_active) {
+                    prv->enabled = FALSE;
+                }
             }
 
             if ((nerr = nwam_ncu_commit(prv->ncu_handles[i], 0)) != NWAM_SUCCESS) {
@@ -2783,7 +2785,10 @@ nwamui_object_real_set_enabled(NwamuiObject *object, gboolean enabled)
     if (self->prv->enabled != enabled) {
         self->prv->enabled = enabled;
         g_object_notify(G_OBJECT(object), "enabled" );
-        set_modified_flag( self, NWAM_NCU_CLASS_PHYS, TRUE );
+        /* doo#16546 Make sure set_enabled happens on every object. */
+        for (nwam_ncu_class_t i = 0; i < NWAM_NCU_CLASS_ANY; i++) {
+            set_modified_flag(self, i, TRUE );
+        }
     }
 }
 
